# kairos-server

./: .env.example  .gitignore  Cargo.toml  README.md  init.sh
migrations/: 20200718111257_create_users_table.sql  20240906085119_create_users_table.sql  20240906085122_create_sessions_table.sql  20250413181519_create_refresh_tokens_table.sql
src/: config.rs  db.rs  lib.rs  main.rs  routes.rs
src/handlers/: auth.rs  misc.rs  mod.rs  project.rs  session.rs  user.rs
src/models/: mod.rs  project.rs  session.rs  token.rs  user.rs
